--- a/css/jquery.modal.css
+++ b/css/jquery.modal.css
@@ -20,9 +20,9 @@
     background-color: #ffffff;
     font-family: sans-serif;
     color: #444;
-    -webkit-border-radius: 5px;
-       -moz-border-radius: 5px;
-            border-radius: 5px;
+    -webkit-border-radius: 4px;
+       -moz-border-radius: 4px;
+            border-radius: 4px;
     -webkit-background-clip: padding-box;
        -moz-background-clip: padding-box;
             background-clip: padding-box;
@@ -79,9 +79,9 @@
 */	
 #modal-window .modal-box .modal-title {
     position: relative;
-    padding: 10px 15px;
+    padding: 12px 15px;
     border-bottom: 1px solid #e5e5e5;
-    font-size: 22px;
+    font-size: 20px;
     overflow: hidden;
 }
 
@@ -120,7 +120,6 @@
 */	
 #modal-window .modal-box .modal-text {
     font-size: 14px;
-    line-height: 18px;
     padding: 18px 15px;
     overflow-y: auto;
 }
@@ -452,7 +451,7 @@
 }
 
 #modal-window .modal-box.modal-type-inverted .modal-title {
-    background-color: #444;
+    background-color: #232B31;
 }
 
 #modal-window .modal-box.modal-type-primary .modal-title {
