--- a/css/jquery.modal.css
+++ b/css/jquery.modal.css
@@ -88,6 +88,7 @@
 #modal-window .modal-box .modal-title h3 {
     font-size: 22px;
     font-weight: normal;
+    line-height: normal;
     display: inline-block;
     margin: 0;
     padding: 0;
