--- a/css/jquery.modal.css
+++ b/css/jquery.modal.css
@@ -86,6 +86,7 @@
 }
 
 #modal-window .modal-box .modal-title h3 {
+    color: #fff;
     font-size: 22px;
     font-weight: normal;
     line-height: normal;
