--- a/css/jquery.modal.theme-atlant.css
+++ b/css/jquery.modal.theme-atlant.css
@@ -1,8 +1,8 @@
 /* 
  * CSS Modal |  Atlant Theme
- * Copyright (c) 2014 CreativeDream
+ * Copyright (c) 2015 CreativeDream
  * Website http://creativedream.net/plugins
- * Version: 1.2 (20-10-2014)
+ * Version: 1.2.2 (10-04-2015)
 */
 #modal-window .modal-box.modal-theme-atlant {
     position: relative;
@@ -66,6 +66,7 @@
 }
 
 #modal-window .modal-box.modal-theme-atlant .modal-title h3 {
+    color: #fff;
     font-size: 31px;
     font-weight: 400;
     line-height: 36px;
