--- a/css/jquery.modal.css
+++ b/css/jquery.modal.css
@@ -9,9 +9,12 @@
 
 #modal-window > *{
     margin: 0;
-    padding: 0;
-    border: 0;
-    vertical-align: baseline;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+    line-height: 1;
+	vertical-align: baseline;
 }
 
 #modal-window .modal-box {
